tests/baselines/reference/parser.numericSeparators.octalNegative.errors.txt
1.ts(1,5): error TS6188: Numeric separators are not allowed here.
2.ts(1,3): error TS6188: Numeric separators are not allowed here.
3.ts(1,2): error TS6188: Numeric separators are not allowed here.
3.ts(1,3): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
3.ts(1,3): error TS2304: Cannot find name 'O0101'.
4.ts(1,6): error TS6189: Multiple consecutive numeric separators are not permitted.
5.ts(1,13): error TS6189: Multiple consecutive numeric separators are not permitted.
6.ts(1,3): error TS6188: Numeric separators are not allowed here.
6.ts(1,4): error TS6188: Numeric separators are not allowed here.
6.ts(1,5): error TS6188: Numeric separators are not allowed here.


==== 1.ts (1 errors) ====
    0o00_
        ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== 2.ts (1 errors) ====
    0o_110
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== 3.ts (3 errors) ====
    0_O0101
     ~
!!! error TS6188: Numeric separators are not allowed here.
      ~~~~~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
      ~~~~~
!!! error TS2304: Cannot find name 'O0101'.
    
==== 4.ts (1 errors) ====
    0o01__11
         ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== 5.ts (1 errors) ====
    0O0110_0110__
                ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== 6.ts (3 errors) ====
    0o___0111010_0101_1
      ~
!!! error TS6188: Numeric separators are not allowed here.
       ~
!!! error TS6188: Numeric separators are not allowed here.
        ~
!!! error TS6188: Numeric separators are not allowed here.
    